# thrift

./: .asf.yaml  .eslintignore  .eslintrc.json  .flake8  .gitignore  .gitmodules  .npmignore  .perlcriticrc  .rubocop.yml  .travis.yml  AGENTS.md  ApacheThrift.nuspec  CHANGELOG.md  CHANGES  CHANGES.md  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS  DISCLAIMER  Dockerfile  FUZZING.md  LANGUAGES.md  LICENSE  Makefile.am  NEWS  NOTICE  Package.swift  README  README.SSL  README.md  SECURITY.md  TEST.md  Thrift-swift3.podspec  Thrift.podspec  Vagrantfile  appveyor.yml  bootstrap.sh  bower.json  build_net_thrift.ps1  circle.yml  (+27 more)
compiler/cpp/: CMakeLists.txt  Makefile  Makefile.am  Makefile.mcslee  README  README.md  README_Windows.md  README_Windows.txt  bootstrap.sh  cleanup.sh  compiler.sln  compiler.slnx  compiler.vcxproj  compiler.vcxproj.filters  configure.ac  cpp.mk  test_parser.sh
contrib/thrift-maven-plugin/: CMakeLists.txt  Makefile.am  pom.xml
lib/: .gitmodules  Makefile.am
lib/alterl/: Makefile  README
lib/as3/: CMakeLists.txt  Makefile.am  README.md  build.gradle  build.xml  gradle.properties  settings.gradle
lib/c_glib/: CMakeLists.txt  Makefile.am  README.md  coding_standards.md  thrift_c_glib.pc.in
lib/cl/: Makefile.am  README.md  binary-protocol.lisp  classes.lisp  client.lisp  conditions.lisp  definition-operators.lisp  ensure-externals.sh  float.lisp  framed-transport.lisp  load-locally.lisp  package.lisp  parameters.lisp  protocol.lisp  server.lisp  symbols.lisp  thrift.asd  transport.lisp  types.lisp  vector-protocol.lisp
lib/cocoa/: TApplicationException.h  TBinaryProtocol.h  TBinaryProtocol.m  TException.h  TException.m  THTTPClient.m  TNSFileHandleTransport.m  TNSStreamTransport.m  TProcessor.h  TProtocol.h  TProtocolException.m  TProtocolUtil.h  TProtocolUtil.m  TSocketClient.h  TSocketServer.h  TSocketServer.m  TTransport.h
lib/cpp/: CMakeLists.txt  Makefile  Makefile.am  Makefile.slee  README  README.md  README_WINDOWS  TDispatcher.h  Thrift.h  bootstrap.sh  cleanup.sh  coding_standards.md  configure.ac  libthrift.vcxproj  libthrift.vcxproj.filters  libthriftQt.pro  libthriftnb.vcxproj  libthriftnb.vcxproj.filters  thrift-nb.pc.in  thrift-qt.pc.in  thrift-z.pc.in  thrift.pc.in  thrift.sln
lib/csharp/: .gitignore  Directory.Build.props  Makefile.am  README.md  Thrift.sln  coding_standards.md
lib/d/: .gitignore  Makefile.am  README.md  dub.json
lib/dart/: .gitignore  Makefile.am  README.md  analysis_options.yaml  pubspec.yaml
lib/delphi/: DelphiThrift.groupproj  Thrift.groupproj  Thrift.groupproj.local
lib/erl/: LICENSE  Makefile  Makefile.am  README  README.md  TODO  rebar  rebar.config  rebar.test.config  thrift  vsn.mk
lib/erlang/: .gitignore  Makefile.am  rebar.config  rebar.test.config
lib/go/: Make.deps  Makefile  Makefile.am  README  README.md  deps.bash
lib/haxe/: README.md  haxelib.json
lib/hs/: CMakeLists.txt  Makefile.am  README  README.md  Setup.lhs  Thrift.cabal  run-test.sh  thrift.cabal
lib/java/: .classpath  .gitignore  CMakeLists.txt  Makefile.am  README  README-release.md  README.md  build.gradle  build.properties  build.xml  gradle.properties  ivy.xml  pom.xml
lib/javame/: coding_standards.md
lib/js/: CMakeLists.txt  Gruntfile.js  Makefile.am  README  README.md  package-lock.json  package.json  thrift.js
lib/json/: Makefile.am  schema.json
lib/kotlin/: .gitignore  CMakeLists.txt  Makefile.am  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
lib/lua/: Makefile.am  TBinaryProtocol.lua  TBufferedTransport.lua  TCompactProtocol.lua  TFramedTransport.lua  THttpTransport.lua  TJsonProtocol.lua  TMemoryBuffer.lua  TProtocol.lua  TServer.lua  TSocket.lua  TTransport.lua  Thrift.lua
lib/netcore/: .gitignore  CHANGELOG.md  Makefile.am  README.md  Thrift.sln  build.cmd  build.sh  global.json  runtests.cmd
lib/netstd/: CMakeLists.txt  Directory.Build.props  Makefile.am  README.md  Thrift.sln  Thrift.slnx  buildfuzzers.sh  runfuzzer.sh
lib/nodejs/: CMakeLists.txt  Makefile.am  README.md  package.json
lib/nodets/: .gitignore  Makefile.am
lib/ocaml/: Makefile  OCamlMakefile  README  README-OCamlMakefile  _oasis  opam
lib/perl/: MANIFEST.SKIP  Makefile.PL  Makefile.am  README  README.md  build-cpan-dist.sh  test.pl
lib/php/: Makefile.am  README  README.apache  README.apache.md  README.md  coding_standards.md  configure.ac  phpstan-baseline.neon  phpstan.neon  phpunit.xml
lib/py/: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  Makefile.am  README  README.md  cleanup.sh  coding_standards.md  configure.ac  pyproject.toml  requirements.txt  setup.cfg  setup.py
lib/rb/: .rubocop.yml  CHANGELOG  Gemfile  Gemfile.linters  LICENSE  Makefile.am  Manifest  README  README.md  Rakefile  coding_standards.md  setup.rb  thrift.gemspec
lib/rs/: Cargo.toml  LICENSE.md  Makefile.am  NOTICE  README.md  RELEASING.md  release.sh
lib/st/: README  package.xml  thrift.st
lib/swift/: Makefile.am  Package.swift  README.md
lib/ts/: .gitignore  Gruntfile.js  Makefile.am  package-lock.json  package.json  thrift.d.ts  tsconfig.json
lib/xml/: Makefile.am  thrift-idl.xsd
test/: AllProtocolTests.tcc  AnnotationTest.thrift  Benchmark.cpp  BrokenConstants.thrift  ConstantsDemo.thrift  DebugProtoTest.cpp  DebugProtoTest.thrift  DebugProtoTest_extras.cpp  DenseLinkingTest.thrift  DenseProtoTest.cpp  DocTest.thrift  DoubleConstantsTest.thrift  EnumTest.thrift  ExceptionStruct.thrift  FastbinaryTest.py  FloatTest.thrift  FuzzTest.thrift  FuzzTestNoUuid.thrift  Identifiers.thrift  Include.thrift  Int64Test.thrift  JSONProtoTest.cpp  JavaBeansTest.thrift  JavaBinaryDefault.thrift  JavaOptionTypeJdk8Test.thrift  JavaOptionTypeJdk8WithPostfixTest.thrift  JavaTypes.thrift  JsDeepConstructorTest.thrift  JsRecursionDepthTest.thrift  Makefile.am  ManyTypedefs.thrift  NameConflictTest.thrift  OptionalRequiredTest.cpp  OptionalRequiredTest.thrift  README.md  Recursive.thrift  ReflectionTest.cpp  ReuseObjects.thrift  Service.thrift  SmallTest.thrift  (+18 more)
test/audit/: thrift_audit_test.pl
test/c_glib/: CMakeLists.txt  (+1 more)
(+4772 files in other folders)
