SUBDIRS = compiler/cpp lib/cpp lib/py if
## Don't run make dist from a subversion working copy
## because it will pull in your .svn directories.
EXTRA_DIST = bootstrap.sh cleanup.sh doc test tutorial \
						 thrift.el thrift.vim thrift.bnf CONTRIBUTORS LICENSE \
             lib/cocoa lib/erl lib/hs lib/java lib/ocaml lib/perl lib/php lib/rb
